--- a/Day7_HW/Day_007_Feature_Types.ipynb
+++ b/Day7_HW/Day_007_Feature_Types.ipynb
@@ -33,36 +33,43 @@
     "\n",
     "[Predictive Analysis of Survival Rate on Titanic - Kaggle](https://www.kaggle.com/beiqiwang/predictive-analysis-of-survival-rate-on-titanic)\n",
     "\n",
-    "* log1p()\n",
+    "* log1p(x): ```x值非常接近0時，不會出現log(x) = 0，會給予正確log結果```\n",
+    "\n",
+    "![](https://i.stack.imgur.com/ycPOC.png)\n",
     "\n",
     "[What is the purpose of numpy.log1p() - Stackoverflow](https://stackoverflow.com/questions/49538185/what-is-the-purpose-of-numpy-log1p)\n",
     "\n",
-    "* drop()\n",
+    "* nunique(): ```可以計算出row/column的差異值```\n",
+    "\n",
+    "[Pandas.DataFrame.nunique() - GeeksforGeeks](https://www.geeksforgeeks.org/python-pandas-dataframe-nunique/)\n",
+    "\n",
+    "\n",
+    "* drop(): ``````\n",
     "\n",
     "[Pandas.DataFrame.drop - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop.html)\n",
     "\n",
-    "* concat()\n",
+    "* concat(): ``````\n",
     "\n",
     "[Pandas.concat - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.concat.html)\n",
     "\n",
-    "* aggregate()\n",
+    "* aggregate(): ``````\n",
     "\n",
     "[Pandas.DataFrame.aggregate - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.aggregate.html)\n",
     "\n",
     "\n",
-    "* Groupby()\n",
+    "* Groupby(): ``````\n",
     "\n",
     "[Pandas.DataFrame.groupby - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html)\n",
     "\n",
     "[Groupby: Get statistics for each group(such as count, mean, etc) - Stackoverflow](https://stackoverflow.com/questions/19384532/get-statistics-for-each-group-such-as-count-mean-etc-using-pandas-groupby)\n",
     "\n",
-    "* dtpyes()\n",
+    "* dtpyes(): ``````\n",
     "\n",
-    "[Pandas.DataFrame.dtypes - pandas documents]([Pandas.DataFrame.groupby - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html))\n",
+    "[Pandas.DataFrame.dtypes - pandas documents](https://pandas.pydata.org/pandasdocs/stable/reference/api/pandas.DataFrame.groupby.html))\n",
     "\n",
-    "* zip()\n",
+    "* zip(): ``````\n",
     "\n",
-    "[zip() function](https://www.w3schools.com/python/ref_func_zip.asp)"
+    "[zip() function ](https://www.w3schools.com/python/ref_func_zip.asp)"
    ]
   },
   {
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +320,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,10 +329,10 @@
     "# 訓練資料需要 train_X, train_Y / 預測輸出需要 ids(識別每個預測值), test_X\n",
     "# 在此先抽離出 train_Y 與 ids, 而先將 train_X, test_X 該有的資料合併成 df, 先作特徵工程\n",
     "train_Y = np.log1p(data_train['SalePrice'])\n",
-    "print(data_train['SalePrice'])\n",
     "ids = data_test['Id']\n",
+    "print(data_train['SalePrice'])\n",
     "\n",
-    "# axis = 1 代表整個column\n",
+    "# axis = 1 代表\n",
     "# SalePrice only exists in data_train\n",
     "data_train = data_train.drop(['Id', 'SalePrice'] , axis=1)\n",
     "data_test = data_test.drop(['Id'] , axis=1)\n",
@@ -335,47 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            index        0\n",
-      "0      MSSubClass    int64\n",
-      "1        MSZoning   object\n",
-      "2     LotFrontage  float64\n",
-      "3         LotArea    int64\n",
-      "4          Street   object\n",
-      "..            ...      ...\n",
-      "74        MiscVal    int64\n",
-      "75         MoSold    int64\n",
-      "76         YrSold    int64\n",
-      "77       SaleType   object\n",
-      "78  SaleCondition   object\n",
-      "\n",
-      "[79 rows x 2 columns]\n",
-      "Index(['MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street', 'Alley',\n",
-      "       'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope',\n",
-      "       'Neighborhood', 'Condition1', 'Condition2', 'BldgType', 'HouseStyle',\n",
-      "       'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'RoofStyle',\n",
-      "       'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'MasVnrArea',\n",
-      "       'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond',\n",
-      "       'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2',\n",
-      "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating', 'HeatingQC',\n",
-      "       'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF', 'LowQualFinSF',\n",
-      "       'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath', 'HalfBath',\n",
-      "       'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual', 'TotRmsAbvGrd',\n",
-      "       'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType', 'GarageYrBlt',\n",
-      "       'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual', 'GarageCond',\n",
-      "       'PavedDrive', 'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch',\n",
-      "       'ScreenPorch', 'PoolArea', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal',\n",
-      "       'MoSold', 'YrSold', 'SaleType', 'SaleCondition'],\n",
-      "      dtype='object')\n",
-      "<zip object at 0x000001AAFE95D4C8>\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -428,7 +397,7 @@
        "2      object     43"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,12 +407,57 @@
     "# df.dtypes : 轉成以欄位為 index, 類別(type)為 value 的 DataFrame\n",
     "# .reset_index() : 預設是將原本的 index 轉成一個新的欄位, 如果不須保留 index, 則通常會寫成 .reset_index(drop=True)\n",
     "dtype_df = df.dtypes.reset_index() \n",
-    "print(dtype_df)\n",
-    "print(df.columns)\n",
-    "print(zip(df.dtypes, df.columns))\n",
     "dtype_df.columns = [\"Count\", \"Column Type\"]\n",
     "dtype_df = dtype_df.groupby(\"Column Type\").aggregate('count').reset_index()\n",
     "dtype_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 了解程式碼背後的意義\n",
+    "DataFrame.dtypes/ DataFrame.columns/ zip(df.dtypes, df.columns)背後所儲存的資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Column Type  Count\n",
+      "0       int64     25\n",
+      "1     float64     11\n",
+      "2      object     43\n",
+      "Index(['MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street', 'Alley',\n",
+      "       'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope',\n",
+      "       'Neighborhood', 'Condition1', 'Condition2', 'BldgType', 'HouseStyle',\n",
+      "       'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'RoofStyle',\n",
+      "       'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'MasVnrArea',\n",
+      "       'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond',\n",
+      "       'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2',\n",
+      "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating', 'HeatingQC',\n",
+      "       'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF', 'LowQualFinSF',\n",
+      "       'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath', 'HalfBath',\n",
+      "       'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual', 'TotRmsAbvGrd',\n",
+      "       'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType', 'GarageYrBlt',\n",
+      "       'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual', 'GarageCond',\n",
+      "       'PavedDrive', 'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch',\n",
+      "       'ScreenPorch', 'PoolArea', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal',\n",
+      "       'MoSold', 'YrSold', 'SaleType', 'SaleCondition'],\n",
+      "      dtype='object')\n",
+      "<zip object at 0x000001AAFC776488>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dtype_df)\n",
+    "print(df.columns)\n",
+    "print(zip(df.dtypes, df.columns))"
    ]
   },
   {
@@ -732,7 +746,7 @@
     "df[int_features].head()\n",
     "print(df[int_features].head().mean(), '\\n')\n",
     "print(df[int_features].head().max(), '\\n')\n",
-    "print(df[int_features].head().nunique(), '\\n')\n"
+    "print(df[int_features].head().nunique(), '\\n')"
    ]
   },
   {
