--- a/Day7_HW/Day_007_HW.ipynb
+++ b/Day7_HW/Day_007_HW.ipynb
@@ -31,39 +31,45 @@
     "3. 之後reset the index of data，將不同的data 分類成int64, float64, object的形式並和資料結合，將不同型態的columns的資料區別開來(顯示特定類型的欄位資料) \n",
     "\n",
     "## Resources\n",
-    "\n",
     "[Predictive Analysis of Survival Rate on Titanic - Kaggle](https://www.kaggle.com/beiqiwang/predictive-analysis-of-survival-rate-on-titanic)\n",
     "\n",
-    "* log1p()\n",
+    "* log1p(x): ```x值非常接近0時，不會出現log(x) = 0，會給予正確log結果```\n",
+    "\n",
+    "![](https://i.stack.imgur.com/ycPOC.png)\n",
     "\n",
     "[What is the purpose of numpy.log1p() - Stackoverflow](https://stackoverflow.com/questions/49538185/what-is-the-purpose-of-numpy-log1p)\n",
     "\n",
-    "* drop()\n",
+    "* nunique(): ```可以計算出row/column的差異值```\n",
+    "\n",
+    "[Pandas.DataFrame.nunique() - GeeksforGeeks](https://www.geeksforgeeks.org/python-pandas-dataframe-nunique/)\n",
+    "\n",
+    "\n",
+    "* drop(): ``````\n",
     "\n",
     "[Pandas.DataFrame.drop - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop.html)\n",
     "\n",
-    "* concat()\n",
+    "* concat(): ``````\n",
     "\n",
     "[Pandas.concat - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.concat.html)\n",
     "\n",
-    "* aggregate()\n",
+    "* aggregate(): ``````\n",
     "\n",
     "[Pandas.DataFrame.aggregate - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.aggregate.html)\n",
     "\n",
     "\n",
-    "* Groupby()\n",
+    "* Groupby(): ``````\n",
     "\n",
     "[Pandas.DataFrame.groupby - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html)\n",
     "\n",
     "[Groupby: Get statistics for each group(such as count, mean, etc) - Stackoverflow](https://stackoverflow.com/questions/19384532/get-statistics-for-each-group-such-as-count-mean-etc-using-pandas-groupby)\n",
     "\n",
-    "* dtpyes()\n",
+    "* dtpyes(): ``````\n",
     "\n",
-    "[Pandas.DataFrame.dtypes - pandas documents]([Pandas.DataFrame.groupby - pandas documents](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html))\n",
+    "[Pandas.DataFrame.dtypes - pandas documents](https://pandas.pydata.org/pandasdocs/stable/reference/api/pandas.DataFrame.groupby.html))\n",
     "\n",
-    "* zip()\n",
+    "* zip(): ``````\n",
     "\n",
-    "[zip() function](https://www.w3schools.com/python/ref_func_zip.asp)"
+    "[zip() function ](https://www.w3schools.com/python/ref_func_zip.asp)"
    ]
   },
   {
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -98,27 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      0\n",
-      "1      1\n",
-      "2      1\n",
-      "3      1\n",
-      "4      0\n",
-      "      ..\n",
-      "886    0\n",
-      "887    1\n",
-      "888    0\n",
-      "889    1\n",
-      "890    0\n",
-      "Name: Survived, Length: 891, dtype: int64\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -238,7 +226,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +235,7 @@
     "# 訓練資料需要 train_X, train_Y / 預測輸出需要 ids(識別每個預測值), test_X\n",
     "# 在此先抽離出 train_Y 與 ids, 而先將 train_X, test_X 該有的資料合併成 df, 先作特徵工程\n",
     "train_Y = np.log1p(data_train['Survived'])\n",
-    "print(data_train['Survived'])\n",
+    "# print(data_train['Survived'])\n",
     "ids = data_test['PassengerId']\n",
     "\n",
     "# axis = 1 代表整個column\n",
@@ -260,30 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      index        0\n",
-      "0    Pclass    int64\n",
-      "1      Name   object\n",
-      "2       Sex   object\n",
-      "3       Age  float64\n",
-      "4     SibSp    int64\n",
-      "5     Parch    int64\n",
-      "6    Ticket   object\n",
-      "7      Fare  float64\n",
-      "8     Cabin   object\n",
-      "9  Embarked   object\n",
-      "Index(['Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare',\n",
-      "       'Cabin', 'Embarked'],\n",
-      "      dtype='object')\n",
-      "<zip object at 0x000001788132C448>\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -336,7 +303,7 @@
        "2      object      5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,12 +313,43 @@
     "# df.dtypes : 轉成以欄位為 index, 類別(type)為 value 的 DataFrame\n",
     "# .reset_index() : 預設是將原本的 index 轉成一個新的欄位, 如果不須保留 index, 則通常會寫成 .reset_index(drop=True)\n",
     "dtype_df = df.dtypes.reset_index() \n",
-    "print(dtype_df)\n",
-    "print(df.columns)\n",
-    "print(zip(df.dtypes, df.columns))\n",
     "dtype_df.columns = [\"Count\", \"Column Type\"]\n",
     "dtype_df = dtype_df.groupby(\"Column Type\").aggregate('count').reset_index()\n",
     "dtype_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 了解程式碼背後的意義\n",
+    "DataFrame.dtypes/ DataFrame.columns/ zip(df.dtypes, df.columns)背後所儲存的資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Column Type  Count\n",
+      "0       int64      3\n",
+      "1     float64      2\n",
+      "2      object      5\n",
+      "Index(['Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare',\n",
+      "       'Cabin', 'Embarked'],\n",
+      "      dtype='object')\n",
+      "<zip object at 0x0000017881344C48>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dtype_df)\n",
+    "print(df.columns)\n",
+    "print(zip(df.dtypes, df.columns))"
    ]
   },
   {
@@ -396,7 +394,9 @@
     "## 作業一\n",
     "\n",
     "試著執行作業程式，觀察三種類型的欄位分別進行( 平均 mean / 最大值 Max / 相異值 nunique ) 中的九次操作會有那些問題?\n",
-    "並試著解釋那些發生Error的程式區塊的原因?"
+    "並試著解釋那些發生Error的程式區塊的原因?\n",
+    "\n",
+    "* 在處理object會出現錯誤，因為string無法做平均，這種數值運算，所以會得到Series([], dtype: float64) 空的list。而max() function 給的應該也是比較第一個英文字母的順序。整體只有nunique() function是可以做運算的。"
    ]
   },
   {
@@ -435,13 +435,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                                                Name     Sex  \\\n",
+      "0                            Braund, Mr. Owen Harris    male   \n",
+      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
+      "2                             Heikkinen, Miss. Laina  female   \n",
+      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
+      "4                           Allen, Mr. William Henry    male   \n",
+      "\n",
+      "             Ticket Cabin Embarked  \n",
+      "0         A/5 21171   NaN        S  \n",
+      "1          PC 17599   C85        C  \n",
+      "2  STON/O2. 3101282   NaN        S  \n",
+      "3            113803  C123        S  \n",
+      "4            373450   NaN        S   \n",
+      "\n",
       "Series([], dtype: float64) \n",
       "\n",
       "Name        Heikkinen, Miss. Laina\n",
@@ -461,7 +475,8 @@
     }
    ],
    "source": [
-    "df[object_features].head()\n",
+    "print(df[object_features].head(), '\\n')\n",
+    "\n",
     "print(df[object_features].head().mean(), '\\n')\n",
     "print(df[object_features].head().max(), '\\n')\n",
     "print(df[object_features].head().nunique(), '\\n')"
@@ -507,19 +522,14 @@
     "思考一下，試著舉出今天五種類型以外的一種或多種資料類型，你舉出的新類型是否可以歸在三大類中的某些大類?\n",
     "所以三大類特徵中，哪一大類處理起來應該最複雜?\n",
     "\n",
-    "1. object處理起來最複雜，因為要定義order和分類是一件大工程"
+    "1. object處理起來最複雜，因為要定義order和分類是一件大工程\n",
+    "\n",
+    "2. EX: 複數 (a+bi)，因為需要兩個數字表示，雖然概念上是數值，但因為無法比較大小，因此只能歸類為\"類別型欄位\"，不論其他更奇怪的例子，都可以歸類為類別型欄位，因此類別型欄位應該最難處理"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
