--- a/Day_008/Day_008_HW.ipynb
+++ b/Day_008/Day_008_HW.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,12 +176,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -248,12 +248,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>307507</th>\n",
@@ -272,12 +272,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>307508</th>\n",
@@ -400,11 +400,11 @@
        "0                     0                      0.000                     0.000   \n",
        "1                     0                      0.000                     0.000   \n",
        "2                     0                      0.000                     0.000   \n",
-       "3                     0                        nan                       nan   \n",
+       "3                     0                        NaN                       NaN   \n",
        "4                     0                      0.000                     0.000   \n",
        "...                 ...                        ...                       ...   \n",
-       "307506                0                        nan                       nan   \n",
-       "307507                0                        nan                       nan   \n",
+       "307506                0                        NaN                       NaN   \n",
+       "307507                0                        NaN                       NaN   \n",
        "307508                0                      1.000                     0.000   \n",
        "307509                0                      0.000                     0.000   \n",
        "307510                0                      0.000                     0.000   \n",
@@ -413,11 +413,11 @@
        "0                            0.000                      0.000   \n",
        "1                            0.000                      0.000   \n",
        "2                            0.000                      0.000   \n",
-       "3                              nan                        nan   \n",
+       "3                              NaN                        NaN   \n",
        "4                            0.000                      0.000   \n",
        "...                            ...                        ...   \n",
-       "307506                         nan                        nan   \n",
-       "307507                         nan                        nan   \n",
+       "307506                         NaN                        NaN   \n",
+       "307507                         NaN                        NaN   \n",
        "307508                       0.000                      1.000   \n",
        "307509                       0.000                      0.000   \n",
        "307510                       0.000                      2.000   \n",
@@ -426,11 +426,11 @@
        "0                           0.000                       1.000  \n",
        "1                           0.000                       0.000  \n",
        "2                           0.000                       0.000  \n",
-       "3                             nan                         nan  \n",
+       "3                             NaN                         NaN  \n",
        "4                           0.000                       0.000  \n",
        "...                           ...                         ...  \n",
-       "307506                        nan                         nan  \n",
-       "307507                        nan                         nan  \n",
+       "307506                        NaN                         NaN  \n",
+       "307507                        NaN                         NaN  \n",
        "307508                      0.000                       1.000  \n",
        "307509                      0.000                       0.000  \n",
        "307510                      0.000                       1.000  \n",
@@ -438,7 +438,7 @@
        "[307511 rows x 122 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,6 +807,7 @@
     }
    ],
    "source": [
+    "# 提供各種\n",
     "app_train.describe()"
    ]
   },
@@ -1556,7 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
